feat: registro de clientes

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": "^8.1",
+        "ext-soap": "*",
         "laravel/lumen-framework": "^10.0"
     },
     "require-dev": {
